...

    <string name="snackbar_dismiss">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ongoing_polls">Ongoing polls</string>
    <string name="upcoming_events">Upcoming events</string>

    <string name="poll_status_category">Voting on category</string>
    <string name="poll_status_event">Voting on event</string>
    <string name="poll_status_date">Voting on date</string>
...
    <string name="no_calendar_permissions">Cannot add an event to a calendar - no permissions granted</string>
    <string name="calendar_event_title" type="id">%1$s in %2$s</string>
    <string name="calendar_event_description">Don\'t forget about an Entertain-Matched event</string>
    <string name="calendar_failed">Failed to add an event to a calendar</string>
    <string name="location_settings_category">Location settings</string>

    <string name="pref_location_label">Your location</string>
    <string name="pref_location_summary">Choose which location to use when searching for events</string>
    <string name="no_city_set_snackbar">You haven\'t chosen your city yet. Choose one to start adding polls!</string>
    <string name="no_city_set_snackbar_action">Set city</string>
    <string name="message_tie">There was a tie! Choose from remaining events!</string>
    <string name="internet_dialog_message">It seems that you are not connected to the internet</string>
    <string name="retry">Retry</string>
...
